// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppManagementBlock /> render matches snapshots with all group combinations 1`] = `
<fieldset>
  <legend
    className="sr-only"
  >
    Catalog status:
  </legend>
  <div
    className="app-management walkthrough-manage-help"
  >
    <div
      className="checkbox form-group "
    >
      <label
        className="checkbox-label"
      >
        <input
          aria-disabled={false}
          checked={false}
          data-checked={false}
          id="Available-123"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="Available"
        />
        <span
          className="cr"
        />
        <span
          className="label-text "
        >
          
          <span
            className="label-text-normal"
          >
            Available
          </span>
        </span>
      </label>
    </div>
    <div
      className="checkbox form-group disabled"
    >
      <label
        className="checkbox-label"
      >
        <input
          aria-disabled={true}
          checked={false}
          data-checked={false}
          id="Recommended-123"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="Recommended"
        />
        <span
          className="cr"
        />
        <span
          className="label-text "
        >
          
          <span
            className="label-text-normal"
          >
            Recommended
          </span>
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<AppManagementBlock /> render matches snapshots with all group combinations 2`] = `
<fieldset>
  <legend
    className="sr-only"
  >
    Catalog status:
  </legend>
  <div
    className="app-management walkthrough-manage-help"
  >
    <div
      className="checkbox form-group "
    >
      <label
        className="checkbox-label"
      >
        <input
          aria-disabled={false}
          checked={true}
          data-checked={true}
          id="Available-123"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="Available"
        />
        <span
          className="cr"
        />
        <span
          className="label-text "
        >
          
          <span
            className="label-text-normal"
          >
            Available
          </span>
        </span>
      </label>
    </div>
    <div
      className="checkbox form-group "
    >
      <label
        className="checkbox-label"
      >
        <input
          aria-disabled={false}
          checked={false}
          data-checked={false}
          id="Recommended-123"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="Recommended"
        />
        <span
          className="cr"
        />
        <span
          className="label-text "
        >
          
          <span
            className="label-text-normal"
          >
            Recommended
          </span>
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<AppManagementBlock /> render matches snapshots with all group combinations 3`] = `
<fieldset>
  <legend
    className="sr-only"
  >
    Catalog status:
  </legend>
  <div
    className="app-management walkthrough-manage-help"
  >
    <div
      className="checkbox form-group "
    >
      <label
        className="checkbox-label"
      >
        <input
          aria-disabled={false}
          checked={true}
          data-checked={true}
          id="Available-123"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="Available"
        />
        <span
          className="cr"
        />
        <span
          className="label-text "
        >
          
          <span
            className="label-text-normal"
          >
            Available
          </span>
        </span>
      </label>
    </div>
    <div
      className="checkbox form-group "
    >
      <label
        className="checkbox-label"
      >
        <input
          aria-disabled={false}
          checked={true}
          data-checked={true}
          id="Recommended-123"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="Recommended"
        />
        <span
          className="cr"
        />
        <span
          className="label-text "
        >
          
          <span
            className="label-text-normal"
          >
            Recommended
          </span>
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<AppManagementBlock /> render matches snapshots with all group combinations 4`] = `
<fieldset>
  <legend
    className="sr-only"
  >
    Catalog status:
  </legend>
  <div
    className="app-management walkthrough-manage-help"
  >
    <div
      className="checkbox form-group "
    >
      <label
        className="checkbox-label"
      >
        <input
          aria-disabled={false}
          checked={false}
          data-checked={false}
          id="Available-123"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="Available"
        />
        <span
          className="cr"
        />
        <span
          className="label-text "
        >
          
          <span
            className="label-text-normal"
          >
            Available
          </span>
        </span>
      </label>
    </div>
    <div
      className="checkbox form-group disabled"
    >
      <label
        className="checkbox-label"
      >
        <input
          aria-disabled={true}
          checked={true}
          data-checked={true}
          id="Recommended-123"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="Recommended"
        />
        <span
          className="cr"
        />
        <span
          className="label-text "
        >
          
          <span
            className="label-text-normal"
          >
            Recommended
          </span>
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;
